--- a/HTML/package.json
+++ b/HTML/package.json
@@ -2,6 +2,7 @@
   "name": "html",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@pinecone-database/pinecone": "^4.0.0",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.1.1",
-    "openai": "^4.26.0"
+    "openai": "^4.26.0",
+    "pdf-parse": "^1.1.1"
   }
 }
