--- a/HTML/package.json
+++ b/HTML/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@pinecone-database/pinecone": "^4.0.0",
     "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.1.1",
     "openai": "^4.26.0",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "puppeteer": "^23.10.1"
   }
 }
