--- a/HTML/package.json
+++ b/HTML/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "llamaindex": "^0.8.26",
     "mongoose": "^8.1.1",
     "openai": "^4.26.0",
     "pdf-parse": "^1.1.1",
